# HSVGen

./: CMakeCache.txt  CMakeLists.txt  Makefile  README  README.org  README.txt  cmake_install.cmake  hsvgen  hsvgen.cpp  preprocess.cpp  preprocess.h
doc/: BLUEPRINT
inc/: buildTree.h  preprocess.h
src/: buildTree.cpp  hsvgen.cpp  preprocess.cpp
trials/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  out.txt  trial1  trial1.cpp
